# home-builder-agent

./: .gitignore  CLAUDE.md  README.md  agent_2_5_dashboard.py  agent_2_v1.py  com.chadhomes.bridge-sync.plist  com.chadhomes.client-update.plist  com.chadhomes.dashboard-watcher.plist  com.chadhomes.inbox-watcher.plist  com.chadhomes.morning-brief.plist  com.chadhomes.morning-view.plist  com.chadhomes.notification-triggers.plist  com.chadhomes.reconcile.plist  com.chadhomes.tracker-mirror.plist  com.chadhomes.watchdog.plist  pyproject.toml  watcher.py
.claude/: settings.json
.claude/commands/: add-agent.md  dashboard.md  help.md  inbox.md  timeline.md  update.md  watcher.md
docs/: ROADMAP-2026-05-11.md  ROADMAP-Phase-2-2026-05-11.md  buildertrend-screen-by-screen-RE-2026-05-11.md  competitor-research-2026-05-11.md  competitor-research-photos-2026-05-11.md  ux-design-overhaul-2026-05-11.md
docs/checklists/: chad-redline-packet-2026-05-09.md
docs/codex_handoffs/: TEMPLATE__MIDNIGHT_CLAUDE_TO_CODEX.md
docs/runbooks/: chad-cutover-runbook.md
docs/specs/: canonical-data-model.md  chad-agent.md  checklist-authoring.md  desktop-design-language.md  desktop-renderer.md  gps-geofence-auto-bind.md  learning-loop.md  mac-cmd-slash-popover.md  migration_002_review.md  migration_003_review.md  migration_004_review.md  mobile-design-language.md  morning-view-model.md  permit-office-watcher.md  profile-review-screen.md  scheduling-engine.md  sms-hub.md  vendor-intelligence-system.md  view_models_schema.json
docs/strategy/: Patton_Build_Scaling_Strategy_Implementation.md
home_builder_agent/: __init__.py  config.py
home_builder_agent/agents/: __init__.py  ask_agent.py  bridge_agent.py  chad_agent.py  change_order_agent.py  checklist_seed_agent.py  client_update_agent.py  conversation_store.py  dashboard_refresher.py  finance_agent.py  gmail_followup.py  help_desk.py  inspection_tracker.py  ledger_agent.py  lien_waiver_agent.py  morning_brief.py  morning_view_agent.py  procurement_alerts.py  profile_agent.py  project_agent.py  receipt_agent.py  reconcile_agent.py  router_agent.py  schedule_agent.py  site_log_agent.py  status_agent.py  status_updater.py  timeline_generator.py  triggers_agent.py
home_builder_agent/classifiers/: email.py  invoice.py  supplier_email.py
home_builder_agent/core/: __init__.py  auth.py  chad_context.py  chad_voice.py  claude_client.py  cost_guard.py  heartbeat.py  jurisdiction.py  knowledge_base.py
home_builder_agent/integrations/: __init__.py  docs.py  drive.py  drive_search.py  finance.py  gmail.py  postgres.py  sheets.py
home_builder_agent/observability/: json_log.py  telemetry.py
home_builder_agent/scheduling/: bridge.py  checklists.py  draft_actions.py  engine.py  events.py  lead_times.py  mirror_worker.py  morning_synth.py  notification_triggers.py  phases.py  reconcile.py  schemas.py  store_postgres.py  view_models.py  weather.py
home_builder_agent/scheduling/checklist_templates/: cabinet.json  countertop.json  drywall-rough.json  electrical-rough.json  electrical-set-out.json  final-paint.json  final-punch-out.json  foundation.json  framing.json  hvac-rough.json  hvac-trim-out.json  insulation-rough.json  landscape-irrigation.json  paint.json  plumbing-rough.json  plumbing-set-out.json  post-framing.json  pre-framing.json  precon.json  siding-porch.json  sitework.json  tile.json  trim-stairs.json  wood-flooring.json
home_builder_agent/scripts/: setup_knowledge_base.py
home_builder_agent/watchers/: __init__.py  dashboard.py  inbox.py  watchdog.py
legacy/: agent_1_gmail.py  agent_2_5_update.py  agent_2_v1.py  cleanup_drive.py  hello_claude.py  watcher.py
samples/: README.md  chad-ai-help-list.xlsx  chad-spec-sheet-template.xlsx
scripts/: backfill_project_info_2026-05-11.py  create_finance_office.py  generate_checklist_templates.py  pre_flight_chad_projects.py  uplift_checklists_with_photo_flags.py
tests/: test_bridge_project_info.py  test_chad_agent_create_email_draft.py  test_chad_agent_lifecycle_tools.py  test_chad_agent_memory_attachments.py  test_chad_agent_web_fetch.py  test_chad_agent_write_to_drive.py  test_chad_input_tools.py  test_chad_input_tools_dual_write.py  test_chad_input_tools_integration.py  test_checklists.py  test_conversation_store.py  test_events.py  test_json_log.py  test_mirror_worker.py  test_notification_triggers.py  test_router_path_fallback.py  test_supplier_email.py
