[project]
name = "home-builder-agent"
version = "0.2.0"
description = "Multi-agent AI system for Palmetto Custom Homes — Baldwin County, AL luxury custom home builder."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — not for distribution" }
authors = [{ name = "Connor Patton" }]

# Phase 1 dependencies — same packages CP already pip3-installed globally,
# now declared in one place so any environment (Mac Mini, future Linux box,
# new contributor's machine) can `pip install -e .` and get a working setup.
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.140.0",
    "pydantic>=2.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
# Test deps — populated as we add tests
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# CLI entry points — `pip install -e .` exposes these as real shell commands.
# Then `hb-timeline pelican_point.md` works from anywhere on the Mac Mini,
# instead of `python3 ~/Projects/home-builder-agent/agent_2_v1.py pelican_point.md`.
[project.scripts]
hb-timeline = "home_builder_agent.agents.timeline_generator:main"
hb-update = "home_builder_agent.agents.status_updater:main"
hb-dashboard = "home_builder_agent.agents.dashboard_refresher:main"
hb-inbox = "home_builder_agent.agents.gmail_followup:main"
hb-watcher = "home_builder_agent.watchers.dashboard:main"
hb-inbox-watcher = "home_builder_agent.watchers.inbox:main"
hb-help = "home_builder_agent.agents.help_desk:main"
hb-finance = "home_builder_agent.agents.finance_agent:main"
hb-receipt = "home_builder_agent.agents.receipt_agent:main"
hb-ledger = "home_builder_agent.agents.ledger_agent:main"
hb-brief = "home_builder_agent.agents.morning_brief:main"
hb-morning = "home_builder_agent.agents.morning_view_agent:main"
hb-change = "home_builder_agent.agents.change_order_agent:main"
hb-client-update = "home_builder_agent.agents.client_update_agent:main"
hb-inspect = "home_builder_agent.agents.inspection_tracker:main"
hb-log = "home_builder_agent.agents.site_log_agent:main"
hb-waiver = "home_builder_agent.agents.lien_waiver_agent:main"
hb-schedule = "home_builder_agent.agents.schedule_agent:main"
hb-reconcile = "home_builder_agent.agents.reconcile_agent:main"
hb-bridge = "home_builder_agent.agents.bridge_agent:main"
hb-ask = "home_builder_agent.agents.ask_agent:main"
hb-router = "home_builder_agent.agents.router_agent:main"
hb-profile = "home_builder_agent.agents.profile_agent:main"
hb-watchdog = "home_builder_agent.watchers.watchdog:main"
hb-chad = "home_builder_agent.agents.chad_agent:main"
hb-triggers = "home_builder_agent.agents.triggers_agent:main"
hb-checklist-seed = "home_builder_agent.agents.checklist_seed_agent:main"
hb-status = "home_builder_agent.agents.status_agent:main"
hb-project = "home_builder_agent.agents.project_agent:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["home_builder_agent*"]
exclude = ["legacy*", "tests*", "scripts*"]
